# T3_Paradgmas_-_Tag_Cloud

Trab01-SVG/: .project  Trab01-SVG.cabal
Trab01-SVG/.dist-buildwrapper/: Trab01-SVG.cabal
Trab01-SVG/.dist-buildwrapper/src/: Main.hs
Trab01-SVG/src/: Main.hs
